--- a/style/style.css
+++ b/style/style.css
@@ -28,3 +28,15 @@
     border: 1px solid var(--color-green);
     color: var(--color-green);
 }
+.earth{
+    position: absolute;
+    top: 40px;
+    left: 110px;
+    z-index: 20;
+}
+.earth-2{
+    position: absolute;
+    right: -650px;
+    bottom: 35px;
+    z-index: 20;
+}
