--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 @import url('http://fonts.cdnfonts.com/css/recoleta');
 :root{
     --color-green: #00b300;
+    --color-darkGreen : #028f02;
 }
 *{
     font-family: 'Recoleta', sans-serif;
@@ -24,9 +25,9 @@
     cursor: pointer;
 }
 .btn-green:hover{
-    background-color: white;
+    background-color: var(--color-darkGreen);
     border: 1px solid var(--color-green);
-    color: var(--color-green);
+    color: #fff;
 }
 .earth{
     position: absolute;
