--- a/style/style.css
+++ b/style/style.css
@@ -59,3 +59,6 @@
 data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAAXNSR0IArs4c6QAAACZJREFUGFdjZNjM8J/Bl4ERmUbhwCQJCDJAwWaG/xCVIAAzF8gGAH87GIA19hJqAAAAAElFTkSuQmCC
    ) repeat;
 }
+.cSpan{
+    color: red
+}
