--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,12 @@
 @import url('http://fonts.cdnfonts.com/css/recoleta');
+@import url('https://fonts.googleapis.com/css2?family=Joan&family=Lato&family=Poppins&display=swap');
 :root{
     --color-green: #00b300;
     --color-darkGreen : #028f02;
 }
 *{
-    font-family: 'Recoleta', sans-serif;
+    /* font-family: 'Recoleta', sans-serif; */
+    font-family: 'Joan', serif;
 }
 .bg-green{
     background-color: var(--color-green);
