--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@
 :root{
     --color-green: #00b300;
     --color-darkGreen : #028f02;
+    --color-lightGreen: #1bfc1b;
+    --color-orange: #ffa600d3;
 }
 *{
     /* font-family: 'Recoleta', sans-serif; */
@@ -10,6 +12,12 @@
 }
 .bg-green{
     background-color: var(--color-green);
+}
+.bg-orange{
+    background-color: var(--color-orange);
+}
+.bg-lightGreen{
+    background-color: var(--color-lightGreen);
 }
 .text-green{
     color: var(--color-green);
