--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
     --color-green: #00b300;
     --color-darkGreen : #028f02;
     --color-lightGreen: #1bfc1b;
-    --color-orange: #ffa600d3;
+    --color-pink: #FF8A86;
 }
 *{
     /* font-family: 'Recoleta', sans-serif; */
@@ -13,8 +13,8 @@
 .bg-green{
     background-color: var(--color-green);
 }
-.bg-orange{
-    background-color: var(--color-orange);
+.bg-pink{
+    background-color: var(--color-pink);
 }
 .bg-lightGreen{
     background-color: var(--color-lightGreen);
