--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,8 @@
 *{
     /* font-family: 'Recoleta', sans-serif; */
     font-family: 'Poppins', serif;
+    margin: 0;
+    padding: 0;
 }
 .bg-green{
     background-color: var(--color-green);
